SERVER-32432 Race condition causes seg fault in ReplicationCoordinatorExternalStateImpl shutdown

(cherry picked from commit ca539d91d8da0080b348196b07c9d4e464d4e40e)